--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-jest",
-  "version": "1.0.0",
+  "version": "1.2.2",
   "description": "Library to configure Angular to work with Jest",
   "main": "index.js",
   "scripts": {
@@ -19,5 +19,13 @@
   "bugs": {
     "url": "https://github.com/PiosDamian/angular-jest-config/issues"
   },
-  "homepage": "https://github.com/PiosDamian/angular-jest-config#readme"
+  "homepage": "https://github.com/PiosDamian/angular-jest-config#readme",
+  "devDependencies": {
+    "jest": "^25.2.3",
+    "jest-preset-angular": "^8.1.2"
+  },
+  "dependencies": {},
+  "bin": {
+    "angular-jest-configure": "index.js"
+  }
 }
