--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-jest",
-  "version": "1.2.2",
-  "description": "Library to configure Angular to work with Jest",
+  "version": "1.2.6",
+  "description": "Library to configure Angular to work with Jest based on https://medium.com/angular-in-depth/integrate-jest-into-an-angular-application-and-library-163b01d977ce",
   "main": "index.js",
   "scripts": {
     "test": "test"
@@ -20,10 +20,7 @@
     "url": "https://github.com/PiosDamian/angular-jest-config/issues"
   },
   "homepage": "https://github.com/PiosDamian/angular-jest-config#readme",
-  "devDependencies": {
-    "jest": "^25.2.3",
-    "jest-preset-angular": "^8.1.2"
-  },
+  "devDependencies": {},
   "dependencies": {},
   "bin": {
     "angular-jest-configure": "index.js"
