--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-jest-configurer",
-  "version": "1.0.1",
+  "version": "1.0.1-10",
   "description": "Library to configure Angular to work with Jest based on https://medium.com/angular-in-depth/integrate-jest-into-an-angular-application-and-library-163b01d977ce",
   "main": "index.js",
   "scripts": {
@@ -20,9 +20,8 @@
     "url": "https://github.com/PiosDamian/angular-jest-config/issues"
   },
   "homepage": "https://github.com/PiosDamian/angular-jest-config#readme",
-  "devDependencies": {},
   "dependencies": {},
   "bin": {
-    "angular-jest-configure": "index.js"
+    "configure-angular-jest": "index.js"
   }
 }
